--- a/app/src/main/res/layout/help_overlay.xml
+++ b/app/src/main/res/layout/help_overlay.xml
@@ -4,82 +4,111 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:adjustViewBounds="true"
-        android:dither="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background_grey"
-        android:tileMode="disabled"
-        android:visibility="visible" />
+        android:id="@+id/help_touch"
+        android:clickable="true"></RelativeLayout>
 
-<LinearLayout
-    android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/containerHelp"
-    android:gravity="center"
-    android:clickable="false">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/help_title"
-        android:id="@+id/help_title"
-        android:gravity="center"
-        android:layout_weight="0"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="15sp" />
-
-    <ScrollView
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:fillViewport="false"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="20sp"
-        android:layout_marginTop="10sp"
-        android:layout_marginRight="20sp"
-        android:layout_marginBottom="20sp">
+        android:layout_height="fill_parent">
 
-        <TextView
+        <ImageView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Medium Text"
-            android:id="@+id/help"
-            android:autoText="false"
-            android:ellipsize="marquee"
-            android:textColor="@android:color/black" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:adjustViewBounds="true"
+            android:dither="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background_grey"
+            android:tileMode="disabled"
+            android:visibility="visible" />
 
-    </ScrollView>
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/help_button"
-        android:id="@+id/help_button"
-        android:paddingLeft="50sp"
-        android:paddingRight="50sp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:background="@drawable/button_practice"
-        android:layout_marginLeft="10sp"
-        android:layout_marginRight="10sp" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/help_checkbox"
-        android:id="@+id/help_checkBox"
-        android:checked="false"
+        <LinearLayout
+        android:orientation="vertical" android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/containerHelp"
         android:gravity="center"
-        android:layout_marginBottom="10sp"
-        android:textColor="@android:color/black"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-</LinearLayout>
-    </FrameLayout>
+        android:clickable="false">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/help_title"
+            android:id="@+id/help_title"
+            android:gravity="center"
+            android:layout_weight="0"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
+            android:layout_marginTop="15sp" />
+
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:fillViewport="false"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginRight="20sp"
+            android:layout_marginBottom="20sp"
+            android:clickable="false">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Medium Text"
+                android:id="@+id/help"
+                android:autoText="false"
+                android:ellipsize="marquee"
+                android:textColor="@android:color/black"
+                android:clickable="false" />
+
+        </ScrollView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/help_button"
+            android:id="@+id/textView3"
+            android:gravity="center"
+            android:layout_weight="0"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textStyle="bold"
+            android:padding="10sp" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/help_button"
+            android:id="@+id/help_button"
+            android:paddingLeft="50sp"
+            android:paddingRight="50sp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
+            android:background="@drawable/button_practice"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
+            android:visibility="gone" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/help_checkbox"
+            android:id="@+id/help_checkBox"
+            android:checked="false"
+            android:gravity="center"
+            android:layout_marginBottom="10sp"
+            android:textColor="@android:color/black"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="gone" />
+
+        </LinearLayout>
+    </RelativeLayout>
+
+</FrameLayout>
