--- a/app/src/main/res/layout/score_element.xml
+++ b/app/src/main/res/layout/score_element.xml
@@ -52,7 +52,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Fácil"
         android:layout_gravity="center"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/holo_blue_dark"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/mode"
         android:id="@+id/tvEasy"
@@ -121,7 +121,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Difícil"
             android:layout_gravity="center"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/holo_red_dark"
         android:layout_centerHorizontal="true"
         android:id="@+id/tvHard"
         android:layout_below="@+id/tvEasy"
