--- a/app/src/main/res/layout/top_bar_mode1.xml
+++ b/app/src/main/res/layout/top_bar_mode1.xml
@@ -33,10 +33,23 @@
         android:gravity="center_horizontal|center_vertical"
         android:textAppearance="@android:style/TextAppearance.Holo.Small"
         android:textStyle="bold|italic"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10sp"
         android:textColor="@android:color/black" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/difficulty"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_horizontal|center_vertical"
+        android:textAppearance="@android:style/TextAppearance.Holo.Small"
+        android:textStyle="italic"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:textColor="@android:color/black"
+        android:layout_below="@+id/mode"
+        android:visibility="gone" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -79,11 +92,13 @@
         android:id="@+id/topBarMessage"
         android:layout_gravity="center_vertical"
         android:gravity="center_horizontal|center_vertical"
-        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
-        android:textColor="@android:color/holo_red_dark"
-        android:layout_marginTop="15dp"
-        android:layout_below="@id/mode"
+        android:textAppearance="@android:style/TextAppearance.Holo.Small"
+        android:layout_below="@+id/mode"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible" />
+        android:visibility="visible"
+        android:layout_marginTop="5sp"
+        android:textStyle="italic"
+        android:layout_marginRight="5sp"
+        android:layout_marginLeft="5sp" />
 
 </RelativeLayout>
