--- a/app/src/main/res/layout/archievement_element.xml
+++ b/app/src/main/res/layout/archievement_element.xml
@@ -3,9 +3,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:clickable="false"
     android:background="@android:color/white"
-    android:gravity="center">
+    android:gravity="center"
+    android:id="@+id/element">
 
     <TextView
         android:layout_width="fill_parent"
