--- a/app/src/main/res/layout/archievements.xml
+++ b/app/src/main/res/layout/archievements.xml
@@ -15,9 +15,12 @@
             android:layout_height="fill_parent"
             android:drawSelectorOnTop="false"
             android:layout_gravity="center"
-            android:clickable="false"
+
             android:divider="@null"
-            android:dividerHeight="0sp" />
+            android:dividerHeight="0sp"
+            android:clickable="true" />
+
+        <!-- android:clickable="false" -->
 
     </FrameLayout>
 
