--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -59,7 +59,7 @@
         android:layout_gravity="center"
         android:textAppearance="@android:style/TextAppearance.Medium"
         android:layout_centerHorizontal="true"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/holo_orange_dark"
         android:layout_alignParentBottom="true" />
 
     <TextView
