--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,10 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_margin="20sp">
+        android:layout_marginLeft="20sp"
+        android:layout_marginRight="20sp"
+        android:layout_marginBottom="20sp"
+        android:layout_marginTop="10sp">
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -57,8 +60,8 @@
             android:gravity="center"
             android:orientation="vertical"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="30sp"
-            android:layout_below="@+id/r">
+            android:layout_below="@+id/r"
+            android:layout_marginTop="10sp">
 
             <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/container"
