--- a/app/src/main/res/layout/score_bottombar.xml
+++ b/app/src/main/res/layout/score_bottombar.xml
@@ -6,11 +6,13 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:layout_margin="10sp">
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+        android:layout_marginRight="40sp">
 
         <Button
             android:layout_width="wrap_content"
